# sc-machine

./: CMakeLists.txt
sc-kpm/: CMakeLists.txt
sc-kpm/common/: CMakeLists.txt  kpmAgent.cpp  kpmAgent.hpp  kpmAgentManager.cpp  kpmAgentManager.hpp  kpmKeynodes.cpp  kpmKeynodes.hpp  kpmTypes.hpp  sc_agent.cpp  sc_agent_manager.cpp  sc_agent_manager.h  sc_agent_process.cpp  sc_common.cpp  sc_common.h  sc_debug.cpp  sc_debug.h  sc_keynodes.cpp  sc_keynodes.h  sc_memory_wrap.cpp  sc_memory_wrap.h  sc_types.h
sc-kpm/core/: CMakeLists.txt  sc_kpm.cpp  sc_kpm.hpp  sc_kpm_agent.cpp  sc_kpm_agent.hpp  sc_kpm_defines.hpp  sc_kpm_headers.hpp  sc_kpm_keynodes.cpp  sc_kpm_keynodes.hpp  sc_kpm_module.cpp  sc_kpm_module.hpp  sc_kpm_prerequest.hpp
sc-kpm/iot/: CMakeLists.txt  iot.cpp  iot.hpp  iotAgentLangCommand.cpp  iotAgentLangCommand.hpp  iotKeynodes.cpp  iotKeynodes.hpp
sc-kpm/kbe/: CMakeLists.txt  sc_kpm_kbe.cpp  sc_kpm_kbe.hpp
sc-kpm/merge/: merge.c  merge_keynodes.c  merge_keynodes.h
sc-kpm/merge/agents/: merge_set.c  merge_set.h
sc-kpm/search/: search_keynodes.c  search_keynodes.h
sc-kpm/ui/: uiKeynodes.cpp  uiKeynodes.h
sc-kpm/utils/: utils.c  utils_keynodes.c  utils_keynodes.h
sc-memory/: CMakeLists.txt  sc_helper.h  sc_memory.c
sc-memory/sc-store/sc_event/: sc_event_private.h  sc_event_queue.c  sc_event_queue.h
sc-memory/test/: test_wrap.cpp
sc-memory/wrap/: sc_addr.hpp  sc_iterator.hpp  sc_memory.cpp  sc_memory.hpp  sc_stream.hpp  sc_types.hpp  sc_utils.hpp
sc-network/cpp/sctp_server/: CMakeLists.txt  main.cpp  sctpTypes.h  sctpUserManager.cpp  sctpUserManager.h  sctpVersion.h
scripts/: install_deps_ubuntu.sh
tools/: CMakeLists.txt
tools/builder/src/: gwf_translator.cpp  scs_translator.cpp  translator.cpp  translator.h
tools/reflection/: CMakeLists.txt  sc_refl_generator.cpp  sc_refl_generator.hpp  sc_refl_types.hpp  sc_reflection.cpp
tools/reflection/test/: test.hpp
